stylesheet_indexv3.css
body {
	font-family: Roboto, Helvetica, Arial, sans-serif;
	text-align: justify;
	background: white;
	}
	
a {
	text-decoration: none;
	color: #ff5722;
	font-weight: bold;
}

#title {
	font-size: 5em;
	font-family: CartoGothic, Asap, Calibri, sans-serif;
	margin-left: 0.3em;
	margin-top: 1em;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
	cursor: default;
}
#hline {
	width: 100%;
	background: #ff5722;
	height: 2px;
}
p {
	font-size: 1.2em;
	max-width: 37em;
}
body > p {
	margin-left: 1.5em;
}
h2{
	
}
#resume_expand h2 {
	margin-bottom: -0.3em;
	border-bottom: 3px solid #607d8b;
}
h3 {
	margin-bottom: -0.5em;
}
h4 {
	margin-bottom: -1em;
}

#home_menu {
	display: block;
	max-width: 15em;
}
#home_menu > a {
	text-decoration: none;
	color: black;
	font-weight: normal;
}
#home_menu > a > div {
	font-size: 2em;
	background: #ff5722; /*'tile color*/
	padding: 0.3em;
	margin-left: 0.7em;
	height: 1em;
}
#home_menu > a > div:hover {
	background: #607d8b;
}
.expand {
	display: none;
	position: absolute;
	margin-left: 15em;
	margin-top: -12.8em;/* 3.2em per menu item */
	font-size: 1em;
	max-width: 100%;
	background: #ffcdbe;
	margin-bottom: 5em;
	padding-left: 1em;
	padding-right: 1em;
}

.spotlight {
	width: 20em;
	display: inline-block;
	background: #ffcdbe;
	vertical-align: top;
	height: auto;
	padding: 1em;
}
.spotlight_text {
	height: 9em;
}
.spotlight_media {
	height: 15em;
}
.spotlight img,video {
	margin-top: 0.5em;
	max-width: 100%;
	max-height: 13em;
}
#posts_expand > a {
	text-decoration: none;
	color: black;
	font-weight: normal;
}
.spotlight:hover {
	background: #aaa;
}
#resume_expand {
	width: 40em;
	max-width: 70%;
	border: 0.5em solid #ffcdbe;
	background: white;
	padding: 0.5em;
}
#resume_expand img {
	width: 20em;
	margin-left: 25%;
    margin-right: auto;
}

#contact_expand {
	width: 20em;
	height: 12.8em;
	max-width: 100%;
}
#about_expand {
	width: 20em;
	height: auto;
	max-width: 100%;
}

::selection {
    background: #ffcdbe;
}

/* RESPONSIVE */
	/* PHONES */
@media only screen and (max-width : 59em) {
	p {
		margin-left: 0;
	}
	body > p {
		margin-left: 0;
	}
	#title {
		font-size: 3em;
	}
	#home_menu {
		max-width: 100%;
	}
	#home_menu > a > div {
		margin-left: 0em;
	}	

	.expand {
		position: relative;
		margin-top: 0em;
		margin-left: 0em;
		margin: 0em;
		width: 100%;
		height: auto;
		max-width: 100%;
		padding: 0.8em;
		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
		-moz-box-sizing: border-box;    /* Firefox, other Gecko */
		box-sizing: border-box;         /* Opera/IE 8+ */
	}
	#contact_expand, #resume_expand, #about_expand {
		width: 100%;
		height: auto;
		max-width: 100%;
	}

	.expand a {
		text-decoration: underline;
	}
	.spotlight {
		width: 100%;
		text-align: center;
		margin-top: 0.5em;
		height: auto;
		-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
		-moz-box-sizing: border-box;    /* Firefox, other Gecko */
		box-sizing: border-box;         /* Opera/IE 8+ */
	}
	.spotlight_text {
		height: auto;
	}
	.spotlight_media {
		height: auto;
	}
	.spotlight img,video {
		margin-top: 0.5em;
		max-width: 100%;
		max-height: 100%;
	}
}

